--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                             <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                         </div>
                     </div> -->
-                    <a href="#" class="nav-item nav-link">Contact</a>
+                    <a href="contact.html" class="nav-item nav-link">Contact</a>
                 </div>
                 <a href="#reservar" class="btn btn-primary d-none d-lg-block">Reservar Ahora</a>
             </div>
@@ -109,8 +109,9 @@
                         <div class="p-3" style="max-width: 900px;">
                             <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Spa Movil</h6>
                             <h3 class="display-3 text-capitalize text-white mb-3">Masaje Terapeutico</h3>
-                            <p class="mx-md-5 px-5">Lorem rebum magna dolore amet lorem eirmod magna erat diam stet. Sadips duo stet amet amet ndiam elitr ipsum labore diam</p>
-                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Make Appointment</a>
+                            <p class="mx-md-5 px-5">Diseñado para aliviar la tensión muscular, reducir el estrés y mejorar la circulación sanguínea.
+                                 utilizando técnicas especializadas para abordar tus necesidades específicas y promover el bienestar general. Sumérgete en una experiencia de relajación profunda y revitalización en nuestro spa.</p>
+                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Reservar Cita</a>
                         </div>
                     </div>
                 </div>
@@ -120,8 +121,9 @@
                         <div class="p-3" style="max-width: 900px;">
                             <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Spa Movil</h6>
                             <h3 class="display-3 text-capitalize text-white mb-3">Tratamiento Facial</h3>
-                            <p class="mx-md-5 px-5">Lorem rebum magna dolore amet lorem eirmod magna erat diam stet. Sadips duo stet amet amet ndiam elitr ipsum labore diam</p>
-                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Make Appointment</a>
+                            <p class="mx-md-5 px-5">Nuestros tratamientos faciales te brindan una piel radiante y rejuvenecida. Desde limpiezas profundas hasta tratamientos anti-envejecimiento,
+                                 cada sesión está diseñada para revitalizar tu cutis y realzar tu belleza natural. Disfruta de una experiencia de spa facial incomparable en la comodidad de tu hogar con SpaVenecia a domicilio.</p>
+                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Reservar Cita</a>
                         </div>
                     </div>
                 </div>
@@ -131,8 +133,9 @@
                         <div class="p-3" style="max-width: 900px;">
                             <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Spa Movil</h6>
                             <h3 class="display-3 text-capitalize text-white mb-3">Masaje Reductivo</h3>
-                            <p class="mx-md-5 px-5">Lorem rebum magna dolore amet lorem eirmod magna erat diam stet. Sadips duo stet amet amet ndiam elitr ipsum labore diam</p>
-                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Make Appointment</a>
+                            <p class="mx-md-5 px-5">Nuestro masaje reductor ofrece una experiencia de spa enfocada en reducir la celulitis y tonificar tu cuerpo. Con técnicas especializadas y productos de alta calidad, 
+                                te ayudamos a alcanzar tus objetivos de pérdida de medidas y mejorar la apariencia de tu piel. Disfruta de los beneficios de este tratamiento en la comodidad de tu hogar con SpaVenecia a domicilio.</p>
+                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Reservar Cita</a>
                         </div>
                     </div>
                 </div>
@@ -152,7 +155,7 @@
                 <div class="col-lg-6">
                     <h6 class="d-inline-block text-primary text-uppercase bg-light py-1 px-2">About Us</h6>
                     <h1 class="mb-4">SpaMovil, En la Comodidad de tu Hogar</h1>
-                    <p class="pl-4 border-left border-primary">Dolores lorem lorem ipsum sit et ipsum. Sadip sea amet diam dolore sed et. Sit rebum labore sit sit ut vero no sit. Et elitr stet dolor sed sit et sed ipsum et kasd erat duo eos et erat</p>
+                    <p class="pl-4 border-left border-primary">SpaVenecia es un oasis de bienestar que ofrece una experiencia de spa exclusiva en la comodidad de tu hogar. Desde tratamientos faciales hasta masajes relajantes y reductivos, nos especializamos en brindarte cuidado personalizado para rejuvenecer mente, cuerpo y alma. Además, ofrecemos servicios de regalo para ocasiones especiales como cumpleaños y matrimonios, haciendo que cada momento sea memorable y revitalizante. Déjanos llevarte a un viaje de relajación y renovación sin salir de casa</p>
                     <div class="row pt-3">
                         <!-- <div class="col-6">
                             <div class="bg-light text-center p-4">
@@ -313,7 +316,8 @@
                     <div class="hours-text bg-light p-4 p-lg-5 my-lg-5">
                         <h6 class="d-inline-block text-white text-uppercase bg-primary py-1 px-2">Open Hours</h6>
                         <h1 class="mb-4">Horario de Atencion</h1>
-                        <p>Dolores lorem lorem ipsum sit et ipsum. Sadip sea amet diam dolore sed et. Sit rebum labore sit sit ut vero no sit. Et elitr stet dolor sed sit et sed ipsum et kasd ut. Erat duo eos et erat sed diam duo</p>
+                        <p>Nuestro equipo de SpaVenecia está dedicado a tu bienestar y comodidad. Estamos disponibles para atenderte con nuestros servicios de spa a domicilio según tus horarios y necesidades.
+                             Contáctanos para coordinar una cita y disfrutar de una experiencia de relajación personalizada en el momento que más te convenga.</p>
                         <ul class="list-inline">
                             <li class="h6 py-1"><i class="far fa-circle text-primary mr-3"></i>Lunes a viernes: : 9:00 AM - 7:00 PM</li>
                             <li class="h6 py-1"><i class="far fa-circle text-primary mr-3"></i>Sabado : 9:00 AM - 6:00 PM</li>
@@ -497,33 +501,35 @@
                             <div class="d-flex align-items-center mb-3">
                                 <img class="img-fluid rounded-circle" src="img/testimonial-1.jpg" style="width: 60px; height: 60px;" alt="">
                                 <div class="ml-3">
-                                    <h6 class="text-uppercase">Client Name</h6>
-                                    <span>Profession</span>
+                                    <h6 class="text-uppercase">Maria G</h6>
+                                    <span>Enfermera</span>
                                 </div>
                             </div>
-                            <p class="m-0">Aliquyam sed elitr elitr erat sed diam ipsum eirmod eos lorem nonumy. Tempor sea ipsum diam  sed clita dolore eos dolores magna erat dolore sed stet justo et dolor.</p>
+                            <p class="m-0">Increíble experiencia! Contraté el masaje reductor y quedé impresionada.
+                                 La terapeuta llegó puntualmente a mi casa y creó un ambiente relajante. Después del tratamiento, noté una diferencia notable en mi piel. ¡Definitivamente lo recomiendo!</p>
                         </div>
                         <div class="position-relative">
                             <i class="fa fa-3x fa-quote-right text-primary position-absolute" style="top: -6px; right: 0;"></i>
                             <div class="d-flex align-items-center mb-3">
                                 <img class="img-fluid rounded-circle" src="img/testimonial-2.jpg" style="width: 60px; height: 60px;" alt="">
                                 <div class="ml-3">
-                                    <h6 class="text-uppercase">Client Name</h6>
-                                    <span>Profession</span>
+                                    <h6 class="text-uppercase">Monica M</h6>
+                                    <span>Psicologo</span>
                                 </div>
                             </div>
-                            <p class="m-0">Aliquyam sed elitr elitr erat sed diam ipsum eirmod eos lorem nonumy. Tempor sea ipsum diam  sed clita dolore eos dolores magna erat dolore sed stet justo et dolor.</p>
+                            <p class="m-0">Excelente servicio a domicilio! Opté por el tratamiento facial y quedé impresionada. La terapeuta fue muy profesional y utilizó productos de alta calidad. Mi piel se sintió rejuvenecida al instante. Volveré a reservar pronto.</p>
                         </div>
                         <div class="position-relative">
                             <i class="fa fa-3x fa-quote-right text-primary position-absolute" style="top: -6px; right: 0;"></i>
                             <div class="d-flex align-items-center mb-3">
                                 <img class="img-fluid rounded-circle" src="img/testimonial-3.jpg" style="width: 60px; height: 60px;" alt="">
                                 <div class="ml-3">
-                                    <h6 class="text-uppercase">Client Name</h6>
-                                    <span>Profession</span>
+                                    <h6 class="text-uppercase">Ana L</h6>
+                                    <span>Diseñadora</span>
                                 </div>
                             </div>
-                            <p class="m-0">Aliquyam sed elitr elitr erat sed diam ipsum eirmod eos lorem nonumy. Tempor sea ipsum diam  sed clita dolore eos dolores magna erat dolore sed stet justo et dolor.</p>
+                            <p class="m-0">Increíble sorpresa para mi cumpleaños. Mis amigos me regalaron un día de spa en casa y SpaVenecia superó mis expectativas.
+                                El masaje relajante fue justo lo que necesitaba para desconectar y mimarme. ¡Gracias por hacer mi día especial.</p>
                         </div>
                     </div>
                 </div>
@@ -541,7 +547,7 @@
                     <a href="index.html" class="navbar-brand">
                         <h1 class="mb-3 text-white"><span class="text-primary">SpaMovil</span> Venecia</h1>
                     </a>
-                    <p>Aliquyam sed elitr elitr erat sed diam ipsum eirmod eos lorem nonumy. Tempor sea ipsum diam  sed clita dolore eos dolores magna erat dolore sed stet justo et dolor.</p>
+                    <p>Bienestar a tu alcance. Sumérgete en un mundo de relajación y rejuvenecimiento con nuestros servicios de spa a domicilio.</p>
                     <p><i class="fa fa-map-marker-alt mr-2"></i>123 Street, Colombia, Colombia</p>
                     <p><i class="fa fa-phone-alt mr-2"></i>+012 345 67890</p>
                     <p><i class="fa fa-envelope mr-2"></i>info@example.com</p>
