--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         <div class="row py-2 px-lg-5">
             <div class="col-lg-6 text-left mb-2 mb-lg-0">
                 <div class="d-inline-flex align-items-center">
-                    <small><i class="fa fa-phone-alt mr-2"></i>+012 345 6789</small>
+                    <small><i class="fa fa-phone-alt mr-2"></i>+57 321 3639344 </small>
                     <small class="px-3">|</small>
-                    <small><i class="fa fa-envelope mr-2"></i>info@example.com</small>
+                    <small><i class="fa fa-envelope mr-2"></i>spamovil10@gmail.com </small>
                 </div>
             </div>
             <div class="col-lg-6 text-right">
@@ -85,7 +85,7 @@
                             <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                         </div>
                     </div> -->
-                    <a href="contact.html" class="nav-item nav-link">Contact</a>
+                    <a href="contact.html" class="nav-item nav-link">Contacto</a>
                 </div>
                 <a href="#reservar" class="btn btn-primary d-none d-lg-block">Reservar Ahora</a>
             </div>
@@ -189,8 +189,8 @@
             <div class="service-item position-relative">
                 <img class="img-fluid" src="img/service-1.jpg" alt="">
                 <div class="service-text text-center">
-                    <h4 class="text-white font-weight-medium px-3">Body Massage</h4>
-                    <p class="text-white px-3 mb-3">Elitr labore sit dolor erat est lorem diam sea ipsum diam dolor duo sit ipsum</p>
+                    <h4 class="text-white font-weight-medium px-3">Terapia física</h4>
+                    <p class="text-white px-3 mb-3">Recupérate de lesiones y mejora tu movilidad con nuestra terapia física especializada, guiada por profesionales dedicados a tu bienestar físico y recuperación.</p>
                     <div class="w-100 bg-white text-center p-4" >
                         <a class="btn btn-primary" href="">Make Order</a>
                     </div>
@@ -199,8 +199,9 @@
             <div class="service-item position-relative">
                 <img class="img-fluid" src="img/service-2.jpg" alt="">
                 <div class="service-text text-center">
-                    <h4 class="text-white font-weight-medium px-3">Stone Therapy</h4>
-                    <p class="text-white px-3 mb-3">Elitr labore sit dolor erat est lorem diam sea ipsum diam dolor duo sit ipsum</p>
+                    <h4 class="text-white font-weight-medium px-3">Masajes Relantes</h4>
+                    <p class="text-white px-3 mb-3">Disfruta de un profundo descanso y renovación con nuestro masaje relajante,
+                         diseñado para liberar tensiones y promover una sensación de calma y bienestar en cuerpo y mente.</p>
                     <div class="w-100 bg-white text-center p-4" >
                         <a class="btn btn-primary" href="">Make Order</a>
                     </div>
@@ -209,8 +210,8 @@
             <div class="service-item position-relative">
                 <img class="img-fluid" src="img/service-3.jpg" alt="">
                 <div class="service-text text-center">
-                    <h4 class="text-white font-weight-medium px-3">Facial Therapy</h4>
-                    <p class="text-white px-3 mb-3">Elitr labore sit dolor erat est lorem diam sea ipsum diam dolor duo sit ipsum</p>
+                    <h4 class="text-white font-weight-medium px-3">Masaje Reductivo</h4>
+                    <p class="text-white px-3 mb-3">Transforma tu cuerpo con nuestro masaje reductivo, una experiencia enfocada en reducir la celulitis y tonificar la piel, para que puedas alcanzar tus objetivos de pérdida de medidas y sentirte seguro en tu piel.</p>
                     <div class="w-100 bg-white text-center p-4" >
                         <a class="btn btn-primary" href="">Make Order</a>
                     </div>
@@ -219,8 +220,8 @@
             <div class="service-item position-relative">
                 <img class="img-fluid" src="img/service-4.jpg" alt="">
                 <div class="service-text text-center">
-                    <h4 class="text-white font-weight-medium px-3">Skin Care</h4>
-                    <p class="text-white px-3 mb-3">Elitr labore sit dolor erat est lorem diam sea ipsum diam dolor duo sit ipsum</p>
+                    <h4 class="text-white font-weight-medium px-3">Tratamiento Facial</h4>
+                    <p class="text-white px-3 mb-3">Renueva y embellece tu piel con nuestros tratamientos faciales personalizados, diseñados para realzar tu belleza natural y rejuvenecer tu cutis.</p>
                     <div class="w-100 bg-white text-center p-4" >
                         <a class="btn btn-primary" href="">Make Order</a>
                     </div>
@@ -229,8 +230,9 @@
             <div class="service-item position-relative">
                 <img class="img-fluid" src="img/service-5.jpg" alt="">
                 <div class="service-text text-center">
-                    <h4 class="text-white font-weight-medium px-3">Stream Bath</h4>
-                    <p class="text-white px-3 mb-3">Elitr labore sit dolor erat est lorem diam sea ipsum diam dolor duo sit ipsum</p>
+                    <h4 class="text-white font-weight-medium px-3">Masaje con Vela Aromatica</h4>
+                    <p class="text-white px-3 mb-3">Sumérgete en una experiencia sensorial única con nuestro masaje con vela aromática. 
+                        Disfruta de la combinación de suaves movimientos de masaje y aromas envolventes que te transportarán a un estado de profunda relajación y bienestar.</p>
                     <div class="w-100 bg-white text-center p-4" >
                         <a class="btn btn-primary" href="">Make Order</a>
                     </div>
@@ -549,8 +551,8 @@
                     </a>
                     <p>Bienestar a tu alcance. Sumérgete en un mundo de relajación y rejuvenecimiento con nuestros servicios de spa a domicilio.</p>
                     <p><i class="fa fa-map-marker-alt mr-2"></i>123 Street, Colombia, Colombia</p>
-                    <p><i class="fa fa-phone-alt mr-2"></i>+012 345 67890</p>
-                    <p><i class="fa fa-envelope mr-2"></i>info@example.com</p>
+                    <p><i class="fa fa-phone-alt mr-2"></i>+57 321 3639344</p>
+                    <p><i class="fa fa-envelope mr-2"></i>spamovil10@gmail.com</p>
                     <div class="d-flex justify-content-start mt-4">
                         <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
@@ -563,9 +565,9 @@
                         <div class="col-sm-6 mb-5">
                             <h5 class="text-white text-uppercase mb-4">Quick Links</h5>
                             <div class="d-flex flex-column justify-content-start">
-                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Home</a>
+                             
                                 <!-- <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>About Us</a> -->
-                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Servicios</a>
+                                <a class="text-white-50 mb-2" href="#servicios"><i class="fa fa-angle-right mr-2"></i>Servicios</a>
                                 <!-- <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Pricing Plan</a> -->
                                 <a class="text-white-50" href="#"><i class="fa fa-angle-right mr-2"></i>Contacto</a>
                             </div>
@@ -573,10 +575,10 @@
                         <div class="col-sm-6 mb-5">
                             <h5 class="text-white text-uppercase mb-4">Our Services</h5>
                             <div class="d-flex flex-column justify-content-start">
-                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Body Massage</a>
-                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Stone Therapy</a>
-                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Facial Therapy</a>
-                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Skin Care</a>
+                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Terapia Fisica</a>
+                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Masajes Relajantes</a>
+                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Tratamiento Facial</a>
+                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Masaje con Vela Aromatica</a>
                                 <a class="text-white-50" href="#"><i class="fa fa-angle-right mr-2"></i>Nail Care</a>
                             </div>
                         </div>
