--- a/contact.html
+++ b/contact.html
@@ -31,9 +31,9 @@
         <div class="row py-2 px-lg-5">
             <div class="col-lg-6 text-left mb-2 mb-lg-0">
                 <div class="d-inline-flex align-items-center">
-                    <small><i class="fa fa-phone-alt mr-2"></i>+012 345 6789</small>
+                    <small><i class="fa fa-phone-alt mr-2"></i>+57 321 3639344 </small>
                     <small class="px-3">|</small>
-                    <small><i class="fa fa-envelope mr-2"></i>info@example.com</small>
+                    <small><i class="fa fa-envelope mr-2"></i>spamovil10@gmail.com</small>
                 </div>
             </div>
             <div class="col-lg-6 text-right">
@@ -64,7 +64,7 @@
     <div class="container-fluid p-0">
         <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 px-lg-5">
             <a href="index.html" class="navbar-brand ml-lg-3">
-                <h1 class="m-0 text-primary"><span class="text-dark">SPA</span> Center</h1>
+                <h1 class="m-0 text-primary"><span class="text-dark">SPA</span> Venecia</h1>
             </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -156,10 +156,10 @@
             <div class="row">
                 <div class="col-lg-6 pr-lg-5 mb-5">
                     <a href="index.html" class="navbar-brand">
-                        <h1 class="mb-3 text-white"><span class="text-primary">SPA</span> Center</h1>
+                        <h1 class="mb-3 text-white"><span class="text-primary">SPA</span> Venecia</h1>
                     </a>
                     <p>Bienestar a tu alcance. Sumérgete en un mundo de relajación y rejuvenecimiento con nuestros servicios de spa a domicilio.</p>
-                    <p><i class="fa fa-map-marker-alt mr-2"></i>123 Street, colombia, Colombia</p>
+                    <p><i class="fa fa-map-marker-alt mr-2"></i>Ciudad Yopal, Departamento Casanare, Colombia</p>
                     <p><i class="fa fa-phone-alt mr-2"></i>+57 321 3639 344</p>
                     <p><i class="fa fa-envelope mr-2"></i>spamovil10@gmail.com</p>
                     <div class="d-flex justify-content-start mt-4">
