--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-6 pb-5 pb-lg-0">
-                    <img class="img-fluid w-100" src="img/about.jpg" alt="">
+                    <img class="img-fluid w-100" src="img/spavenecia2.jpg" alt="">
                 </div>
                 <div class="col-lg-6">
                     <h6 class="d-inline-block text-primary text-uppercase bg-light py-1 px-2">About Us</h6>
@@ -311,7 +311,7 @@
             <div class="row">
                 <div class="col-lg-6" style="min-height: 500px;">
                     <div class="position-relative h-100">
-                        <img class="position-absolute w-100 h-100" src="img/opening.jpg" style="object-fit: cover;">
+                        <img class="position-absolute w-100 h-100" src="img/spavenecia3.jpg" style="object-fit: cover;">
                     </div>
                 </div>
                 <div class="col-lg-6 pt-5 pb-lg-5">
@@ -550,7 +550,7 @@
                         <h1 class="mb-3 text-white"><span class="text-primary">SpaMovil</span> Venecia</h1>
                     </a>
                     <p>Bienestar a tu alcance. Sumérgete en un mundo de relajación y rejuvenecimiento con nuestros servicios de spa a domicilio.</p>
-                    <p><i class="fa fa-map-marker-alt mr-2"></i>123 Street, Colombia, Colombia</p>
+                    <p><i class="fa fa-map-marker-alt mr-2"></i>Ciudad Yopal, Departamento Casanare, Colombia</p>
                     <p><i class="fa fa-phone-alt mr-2"></i>+57 321 3639344</p>
                     <p><i class="fa fa-envelope mr-2"></i>spamovil10@gmail.com</p>
                     <div class="d-flex justify-content-start mt-4">
