--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link rel="icon" type="image/png" href= "img/logoVeneciaSpa.png" >
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -65,8 +65,11 @@
     <div class="container-fluid p-0">
         <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 px-lg-5">
             <a href="index.html" class="navbar-brand ml-lg-3">
-                <h1 class="m-0 text-primary"><span class="text-dark">SPA</span> Venecia</h1>
+                <h1 class="m-0 text-primary">
+                    <img class="logospa" src="./img/logoVeneciaSpa.png" alt="SPA Venecia Logo">
+                </h1>
             </a>
+            
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
