--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                             <h3 class="display-3 text-capitalize text-white mb-3">Masaje Terapeutico</h3>
                             <p class="mx-md-5 px-5">Diseñado para aliviar la tensión muscular, reducir el estrés y mejorar la circulación sanguínea.
                                  utilizando técnicas especializadas para abordar tus necesidades específicas y promover el bienestar general. Sumérgete en una experiencia de relajación profunda y revitalización en nuestro spa.</p>
-                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Reservar Cita</a>
+                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#reservar">Reservar Cita</a>
                         </div>
                     </div>
                 </div>
@@ -126,7 +126,7 @@
                             <h3 class="display-3 text-capitalize text-white mb-3">Tratamiento Facial</h3>
                             <p class="mx-md-5 px-5">Nuestros tratamientos faciales te brindan una piel radiante y rejuvenecida. Desde limpiezas profundas hasta tratamientos anti-envejecimiento,
                                  cada sesión está diseñada para revitalizar tu cutis y realzar tu belleza natural. Disfruta de una experiencia de spa facial incomparable en la comodidad de tu hogar con SpaVenecia a domicilio.</p>
-                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Reservar Cita</a>
+                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#reservar">Reservar Cita</a>
                         </div>
                     </div>
                 </div>
@@ -138,7 +138,7 @@
                             <h3 class="display-3 text-capitalize text-white mb-3">Masaje Reductivo</h3>
                             <p class="mx-md-5 px-5">Nuestro masaje reductor ofrece una experiencia de spa enfocada en reducir la celulitis y tonificar tu cuerpo. Con técnicas especializadas y productos de alta calidad, 
                                 te ayudamos a alcanzar tus objetivos de pérdida de medidas y mejorar la apariencia de tu piel. Disfruta de los beneficios de este tratamiento en la comodidad de tu hogar con SpaVenecia a domicilio.</p>
-                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Reservar Cita</a>
+                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#reservar">Reservar Cita</a>
                         </div>
                     </div>
                 </div>
@@ -195,7 +195,7 @@
                     <h4 class="text-white font-weight-medium px-3">Terapia física</h4>
                     <p class="text-white px-3 mb-3">Recupérate de lesiones y mejora tu movilidad con nuestra terapia física especializada, guiada por profesionales dedicados a tu bienestar físico y recuperación.</p>
                     <div class="w-100 bg-white text-center p-4" >
-                        <a class="btn btn-primary" href="">Make Order</a>
+                        <a class="btn btn-primary" href="#reservar">Reservar</a>
                     </div>
                 </div>
             </div>
@@ -206,7 +206,7 @@
                     <p class="text-white px-3 mb-3">Disfruta de un profundo descanso y renovación con nuestro masaje relajante,
                          diseñado para liberar tensiones y promover una sensación de calma y bienestar en cuerpo y mente.</p>
                     <div class="w-100 bg-white text-center p-4" >
-                        <a class="btn btn-primary" href="">Make Order</a>
+                        <a class="btn btn-primary" href="#reservar">Reservar</a>
                     </div>
                 </div>
             </div>
@@ -216,7 +216,7 @@
                     <h4 class="text-white font-weight-medium px-3">Masaje Reductivo</h4>
                     <p class="text-white px-3 mb-3">Transforma tu cuerpo con nuestro masaje reductivo, una experiencia enfocada en reducir la celulitis y tonificar la piel, para que puedas alcanzar tus objetivos de pérdida de medidas y sentirte seguro en tu piel.</p>
                     <div class="w-100 bg-white text-center p-4" >
-                        <a class="btn btn-primary" href="">Make Order</a>
+                        <a class="btn btn-primary" href="#reservar">Reservar</a>
                     </div>
                 </div>
             </div>
@@ -226,7 +226,7 @@
                     <h4 class="text-white font-weight-medium px-3">Tratamiento Facial</h4>
                     <p class="text-white px-3 mb-3">Renueva y embellece tu piel con nuestros tratamientos faciales personalizados, diseñados para realzar tu belleza natural y rejuvenecer tu cutis.</p>
                     <div class="w-100 bg-white text-center p-4" >
-                        <a class="btn btn-primary" href="">Make Order</a>
+                        <a class="btn btn-primary" href="#reservar">Reservar</a>
                     </div>
                 </div>
             </div>
@@ -237,7 +237,7 @@
                     <p class="text-white px-3 mb-3">Sumérgete en una experiencia sensorial única con nuestro masaje con vela aromática. 
                         Disfruta de la combinación de suaves movimientos de masaje y aromas envolventes que te transportarán a un estado de profunda relajación y bienestar.</p>
                     <div class="w-100 bg-white text-center p-4" >
-                        <a class="btn btn-primary" href="">Make Order</a>
+                        <a class="btn btn-primary" href="#reservar">Reservar</a>
                     </div>
                 </div>
             </div>
@@ -247,7 +247,7 @@
                     <h4 class="text-white font-weight-medium px-3">Face Masking</h4>
                     <p class="text-white px-3 mb-3">Elitr labore sit dolor erat est lorem diam sea ipsum diam dolor duo sit ipsum</p>
                     <div class="w-100 bg-white text-center p-4" >
-                        <a class="btn btn-primary" href="">Make Order</a>
+                        <a class="btn btn-primary" href="#reservar">Reservar</a>
                     </div>
                 </div>
             </div>
@@ -572,17 +572,17 @@
                                 <!-- <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>About Us</a> -->
                                 <a class="text-white-50 mb-2" href="#servicios"><i class="fa fa-angle-right mr-2"></i>Servicios</a>
                                 <!-- <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Pricing Plan</a> -->
-                                <a class="text-white-50" href="#"><i class="fa fa-angle-right mr-2"></i>Contacto</a>
+                                <a class="text-white-50" href="./contact.html"><i class="fa fa-angle-right mr-2"></i>Contacto</a>
                             </div>
                         </div>
                         <div class="col-sm-6 mb-5">
                             <h5 class="text-white text-uppercase mb-4">Our Services</h5>
                             <div class="d-flex flex-column justify-content-start">
-                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Terapia Fisica</a>
-                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Masajes Relajantes</a>
-                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Tratamiento Facial</a>
-                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Masaje con Vela Aromatica</a>
-                                <a class="text-white-50" href="#"><i class="fa fa-angle-right mr-2"></i>Nail Care</a>
+                                <a class="text-white-50 mb-2" href="#reservar"><i class="fa fa-angle-right mr-2"></i>Terapia Fisica</a>
+                                <a class="text-white-50 mb-2" href="#reservar"><i class="fa fa-angle-right mr-2"></i>Masajes Relajantes</a>
+                                <a class="text-white-50 mb-2" href="#reservar"><i class="fa fa-angle-right mr-2"></i>Tratamiento Facial</a>
+                                <a class="text-white-50 mb-2" href="#reservar"><i class="fa fa-angle-right mr-2"></i>Masaje con Vela Aromatica</a>
+                                <a class="text-white-50" href="#reservar"><i class="fa fa-angle-right mr-2"></i>Nail Care</a>
                             </div>
                         </div>
                         <!-- <div class="col-sm-12 mb-5">
